WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176540
[GStreamer] Incorrect GstCaps unreffing in GStreamerEMEUtilities::createDecryptor()
https://bugs.webkit.org/show_bug.cgi?id=176540
Summary
[GStreamer] Incorrect GstCaps unreffing in GStreamerEMEUtilities::createDecry...
Zan Dobersek
Reported
2017-09-07 10:35:50 PDT
[GStreamer] Incorrect GstCaps unreffing in GStreamerEMEUtilities::createDecryptor()
Attachments
Patch
(1.44 KB, patch)
2017-09-07 10:38 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2017-09-07 10:38:02 PDT
Created
attachment 320131
[details]
Patch
Xabier Rodríguez Calvar
Comment 2
2017-09-07 23:46:33 PDT
Comment on
attachment 320131
[details]
Patch Really?
Zan Dobersek
Comment 3
2017-09-08 03:54:44 PDT
Comment on
attachment 320131
[details]
Patch Clearing flags on attachment: 320131 Committed
r221780
: <
http://trac.webkit.org/changeset/221780
>
Zan Dobersek
Comment 4
2017-09-08 03:54:48 PDT
All reviewed patches have been landed. Closing bug.
Zan Dobersek
Comment 5
2017-09-08 09:53:25 PDT
Reopening because the patch still hasn't officially landed due to svn.webkit.org issues.
Zan Dobersek
Comment 6
2017-09-09 05:40:32 PDT
This has in fact landed.
Radar WebKit Bug Importer
Comment 7
2017-09-27 13:02:41 PDT
<
rdar://problem/34694535
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug